--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "core-js": "^3.2.1",
+    "doly-mocker-api": "^1.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "regenerator-runtime": "^0.13.3",
@@ -29,7 +30,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.12.1",
     "cross-env": "^5.2.1",
-    "doly-cli": "0.6.6",
+    "doly-cli": "0.7.0",
     "eslint": "^5.16.0",
     "eslint-config-doly-react": "0.0.3-alpha.0",
     "eslint-config-prettier": "^6.3.0",
