--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "doly-mocker-api": "^1.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "regenerator-runtime": "^0.13.3",
-    "styled-components": "^4.4.1"
+    "regenerator-runtime": "^0.13.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/doly-dev/doly-mobile-template"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^5.2.1",
-    "doly-cli": "0.7.3",
+    "doly-cli": "0.7.4",
     "eslint": "^5.16.0",
     "eslint-config-doly-react": "0.0.3-alpha.0",
     "eslint-config-prettier": "^6.10.0",
