--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^5.2.1",
-    "doly-cli": "0.7.5",
+    "doly-cli": "^0.7.6",
     "doly-mocker-api": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-doly-react": "0.0.3-alpha.0",
