--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@wonder-ui/core": "^1.2.4",
-    "axios": "^0.19.2",
+    "axios": ">=0.21.1",
     "core-js": "^3.6.5",
     "qs": "^6.9.3",
     "react": "^16.13.0",
@@ -33,7 +33,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^5.2.1",
-    "doly-cli": "~0.8.1",
+    "doly-cli": "^0.8.1",
     "doly-mocker-api": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-doly-react": "0.0.3-alpha.0",
