--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "@wonder-ui/core": "^1.2.4",
-    "axios": ">=0.21.1",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "qs": "^6.9.3",
     "react": "^16.13.0",
