--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@wonder-ui/core": "^1.2.4",
+    "@wonder-ui/core": "1.2.18",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "qs": "^6.9.3",
@@ -33,7 +33,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
     "cross-env": "^5.2.1",
-    "doly-cli": "^0.8.1",
+    "doly-cli": "^1.0.1",
     "doly-mocker-api": "^1.0.0",
     "eslint": "^5.16.0",
     "eslint-config-doly-react": "0.0.3-alpha.0",
@@ -64,5 +64,8 @@
     "scripts/**/*.js",
     "doly.config.js",
     "mocker/**/*.js"
-  ]
+  ],
+  "resolutions": {
+    "@wonder-ui/router": "1.0.4"
+  }
 }
